--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -57,10 +57,7 @@ This is a relatively small data set containing data about peak positions on The 
 ```{r billboard_albums_example,message=FALSE,warning=FALSE }
 billboard_albums %>% 
   head() %>%
-  gt() %>%
-  table_style_lp() %>%
-  tab_source_note("Data: Billboard.com" ) %>%
-  tab_header(md("**Billboard Albums**"))
+  knitr::kable()
 
 ```
 
@@ -84,9 +81,7 @@ tribble(~Variable,          ~Description,
         "certification_date", "Date of certification",
         "plat_modifer"      , "Number of times the album has reached platinum"
         ) %>%
-  gt() %>% 
-  table_style_lp() %>%
-  tab_header(md("**RIAA Data Dictionary**"))
+  knitr::kable()
 
 
 
@@ -104,9 +99,7 @@ tribble(~Variable,          ~Description,
         "Album"      , "Album the track appeared on",
         "score"      , "The Percentage of wins of a given song"
         ) %>%
-  gt() %>% 
-  table_style_lp() %>%
-  tab_header(md("**Top 100 Songs Data Dictionary**"))
+  knitr::kable()
 ```
 
 #### Audio Features
@@ -117,21 +110,10 @@ A data set created by using the {`spotifyr`} package to access the spotify API's
 
 Using the billboard data for charted albums we can easily make a table with [{gt}](https://gt.rstudio.com/)
 
-```{r, billboard_data, echo=FALSE, message=FALSE}
+```{r, billboard_data, echo=TRUE, message=FALSE, eval = FALSE}
 
-tribble(
-  ~album_title,	       ~peak_position,	~date_peaked,	~weeks_on_chart,
-  "Hybrid Theory"      ,	        	2,  "2002-01-11",           	215,
-  "Meteora"            ,            1,  "2003-01-11",      	      113, 
-  "Minutes To Midnight",           	1,	"2007-06-01",	             96,
-  "A Thousand Suns"    ,            1,	"2010-10-01",	             39,
-  "Living Things"	     ,            1,	"2012-07-13",	             36,
-  "Live In Texas"      ,           23,	"2003-12-05",	             35,
-  "Reanimation"        ,            2,	"2002-08-19",	             33,
-  "Collision Course"   ,          	1,	"2004-12-17",	             26,
-  "One More Light"     ,            1,	"2017-06-09",	             24,
-  "The Hunting Party"  ,            3,	"2014-07-04",	             20
-  ) %>%
+  
+billboard_albums %>%
   arrange(date_peaked) %>%
   gt::gt() %>% 
   cols_label(album_title = "Album", 
@@ -175,9 +157,10 @@ tribble(
   ) %>%
   tab_source_note("Data: Billboard.com" )
   
-  
 
 ```
+
+![gt\_example\_table](Readme_files/img/gt_example.png)
 
 Using the spotify audio features we can see how different aspects of the bands sound evolved over time
 
